--- a/Code/02Steepest_descent.ipynb
+++ b/Code/02Steepest_descent.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "最速下降法 例3.1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -20,7 +28,6 @@
     "\n",
     "\n",
     "def quadFun(G, b, c, x1, x2):\n",
-    "    # return (1/2)*x.T@G@x+b.T@x+c\n",
     "    return 0.5*(G[0, 0]*x1**2 + 2*G[0, 1]*x1*x2+G[1, 1]*x2**2)+b[0]*x1+b[1]*x2+c\n",
     "\n",
     "\n",
