--- a/Code/03Newtow_method.ipynb
+++ b/Code/03Newtow_method.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "用基本Newtow法(取$\\alpha=1$)求函数的极小值，教材62页例3.2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -16,14 +24,6 @@
     "\n",
     "def f(x1, x2):\n",
     "    return 3*x1**2 + +3*x2**2 - (x1**2)*x2"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "用基本Newtow法(取$\\alpha=1$)求函数的极小值，教材62页例3.2"
    ]
   },
   {
@@ -168,7 +168,7 @@
     "    path3.append(x)\n",
     "    if np.linalg.norm(g, ord=np.inf) < eps:\n",
     "        break\n",
-    "    d = -np.dot(np.linalg.inv(h), g) # 取逆会报错\n",
+    "    d = -np.dot(np.linalg.inv(h), g) # Error: Singular matrix\n",
     "    x = x + a*d\n",
     "    iter += 1\n",
     "\n",
