--- a/Code/01Select_stepSize.ipynb
+++ b/Code/01Select_stepSize.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "下降步长的选择 例2.4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -33,6 +41,7 @@
     }
    ],
    "source": [
+    "# 例2.4\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
