--- a/Code/02Steepest_descent.ipynb
+++ b/Code/02Steepest_descent.ipynb
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 2,
       "metadata": {
         "id": "-POa-XGpkir5"
       },
@@ -119,20 +119,45 @@
         "path1 = steepest_descent(grad_f, G1, b, x0)"
       ],
       "metadata": {
-        "id": "rkrqcZDHMhLx"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rkrqcZDHMhLx",
+        "outputId": "b86853bc-09c5-4254-c40d-d661073db47a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The iteration process:\n",
+            "Iteration 0: [-30 100], |g|=1401.6679349974445\n",
+            "Iteration 1: [-13.56730783   0.3227488 ], |g|=285.4238502087325\n",
+            "Iteration 2: [-0.83873483  2.42116865], |g|=36.44801868335119\n",
+            "Iteration 3: [-0.41143029 -0.17077073], |g|=7.42196747555679\n",
+            "Iteration 4: [-0.08044514 -0.11620485], |g|=0.9477694629179956\n",
+            "Iteration 5: [-0.0693338  -0.18360387], |g|=0.19299578913233126\n",
+            "Iteration 6: [-0.06072709 -0.18218498], |g|=0.024645151843334673\n",
+            "Iteration 7: [-0.06043816 -0.18393758], |g|=0.005018531103172105\n",
+            "Iteration 8: [-0.06021436 -0.18390068], |g|=0.0006408557493623731\n",
+            "Iteration 9: [-0.06020684 -0.18394626], |g|=0.0001304984660379132\n",
+            "Iteration 10: [-0.06020102 -0.1839453 ], |g|=1.66643765920942e-05\n",
+            "Iteration 11: [-0.06020083 -0.18394648], |g|=3.393393263253158e-06\n",
+            "The result is (-0.060200829481802665, -0.18394648227023339)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YRHpI5Ffkir6",
-        "outputId": "eb9fb81c-4b05-474b-d876-7fc972059bdf"
+        "outputId": "4ca2fa19-1a6b-4b30-f6f5-3182ab25d776"
       },
       "outputs": [
         {
@@ -171,25 +196,25 @@
             "Iteration 28: [  1.99255572 -10.97417764], |g|=0.05318776303740735\n",
             "Iteration 29: [  1.99502471 -10.97399354], |g|=0.006122252019631314\n",
             "Iteration 30: [  1.99590457 -10.98579397], |g|=0.029260946424739257\n",
-            "... ...\n",
-            "... ...\n",
-            "... ...\n",
-            "... ...\n",
-            "... ...\n",
-            "... ...\n",
-            "... ...\n",
-            "... ...\n",
-            "... ...\n",
-            "... ...\n",
-            "... ...\n",
-            "... ...\n",
-            "... ...\n",
-            "... ...\n",
-            "... ...\n",
-            "... ...\n",
-            "... ...\n",
-            "... ...\n",
-            "... ...\n",
+            "Iteration 31: [  1.99726287 -10.9856927 ], |g|=0.0033681222543622716\n",
+            "Iteration 32: [  1.99774692 -10.99218463], |g|=0.016097743856474597\n",
+            "Iteration 33: [  1.99849419 -10.99212892], |g|=0.0018529533714054078\n",
+            "Iteration 34: [  1.99876048 -10.99570042], |g|=0.008856082558238618\n",
+            "Iteration 35: [  1.99917158 -10.99566977], |g|=0.0010193917967669648\n",
+            "Iteration 36: [  1.99931809 -10.99763461], |g|=0.004872123632844871\n",
+            "Iteration 37: [  1.99954425 -10.99761775], |g|=0.0005608126201826739\n",
+            "Iteration 38: [  1.99962485 -10.99869869], |g|=0.002680371206680631\n",
+            "Iteration 39: [  1.99974927 -10.99868942], |g|=0.00030852788492266234\n",
+            "Iteration 40: [  1.99979361 -10.99928409], |g|=0.0014745910299566963\n",
+            "Iteration 41: [  1.99986206 -10.99927899], |g|=0.00016973486748768238\n",
+            "Iteration 42: [  1.99988646 -10.99960615], |g|=0.000811237898720815\n",
+            "Iteration 43: [  1.99992412 -10.99960334], |g|=9.337867549431142e-05\n",
+            "Iteration 44: [  1.99993754 -10.99978332], |g|=0.00044629793283709746\n",
+            "Iteration 45: [  1.99995825 -10.99978178], |g|=5.137174917927738e-05\n",
+            "Iteration 46: [  1.99996564 -10.9998808 ], |g|=0.00024552827875480305\n",
+            "Iteration 47: [  1.99997703 -10.99987995], |g|=2.826187669266575e-05\n",
+            "Iteration 48: [  1.99998109 -10.99993442], |g|=0.0001350759911597317\n",
+            "Iteration 49: [  1.99998736 -10.99993395], |g|=1.5548111319518783e-05\n",
             "Iteration 50: [  1.9999896  -10.99996392], |g|=7.431129113142916e-05\n",
             "Iteration 51: [  1.99999305 -10.99996367], |g|=8.553705348192823e-06\n",
             "The result is (1.9999930487760136, -10.999963665076772)\n"
@@ -229,14 +254,14 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "JSppP7LuNj33",
-        "outputId": "cb6a3047-26c1-410c-f4f5-6255f52ebc4d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 507
-        }
+        },
+        "id": "JSppP7LuNj33",
+        "outputId": "e51e85fb-8ec2-40ce-f1e6-56c9c3de5b3c"
       },
-      "execution_count": 19,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
