--- a/Code/03Newtow_method.ipynb
+++ b/Code/03Newtow_method.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "S0LLD8ejMjnS"
       },
@@ -153,7 +153,7 @@
       "metadata": {
         "id": "bDVwjbCeYGQG"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -178,7 +178,7 @@
         "id": "sRqB0kcTY8Wj",
         "outputId": "df0cee2d-1745-4426-ab25-30a8377595a3"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,7 +210,7 @@
         "id": "gNBwN-ZnZixz",
         "outputId": "a8c67f1a-4a3d-4ee9-e4bb-4f449dc6b0e2"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,7 +266,7 @@
         "id": "jrbl7n8oaQ5X",
         "outputId": "4b5ec51c-1807-483f-a6b1-868860cd9828"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -291,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -338,6 +338,16 @@
       ],
       "metadata": {
         "id": "Eu-Z60jye5BC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Next...\n",
+        "In the previous example, we demonstrated the basic usage of Newton's method with a fixed step size. However, in the next notebook, we will explore an enhanced version called damped Newton's method, which contains the line search conditions."
+      ],
+      "metadata": {
+        "id": "3OYwS4qvzC8s"
       }
     }
   ],
